# boxer_ros2

./: CMakeLists.txt  package.xml
config/: my_controller.yaml
launch/: gazebo_description.launch.py  rviz_description.launch.py
urdf/: boxer.gazebo  boxer.urdf.xacro  ros2_control.xacro
urdf/include/: sensors.urdf.xacro  vecow_evs2000.urdf.xacro  wheels_and_casters.urdf.xacro
